--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.8.2",
     "react-loading": "^2.0.3",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
